refactor : aws v2로 변경 후 리팩토링, configuration properties 별도 파일로 분리 #43